tests/label/missing_labels.rs
use tear::twist;

fn missing_labels() {
	twist! { -label JUST_BREAK }
}

fn main () {}